--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' } //para los graficos estadisticos
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -30,6 +34,10 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
+    //implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.4'
+
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'//para los graficos estadisticos
 
 }
