--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ncrdesarrollo.sincronizacionsqlitemysql">
-
     <!-- Red -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-    <!-- AutenticaciÃ³n -->
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
-
-    <!-- SincronizaciÃ³n -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- AutenticaciÃ³n -->
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" /> <!-- SincronizaciÃ³n -->
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
@@ -20,7 +15,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".ui.ActivityDetalleContacto"
+            android:label="@string/title_activity_detalle_contacto"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".ui.ActividadListaContactos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,19 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.ActividadInsercionContacto"
-            android:label="@string/titulo_actividad_insertar_contacto"
-            android:parentActivityName=".ui.ActividadListaContactos"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.ActividadListaContactos" />
-        </activity>
-
-        <activity
-            android:name=".ui.ActividadVerContacto"
             android:label="@string/titulo_actividad_insertar_contacto"
             android:parentActivityName=".ui.ActividadListaContactos"
             android:theme="@style/AppTheme">
@@ -53,7 +40,7 @@
             android:name=".provider.ProviderContactos"
             android:authorities="com.ncrdesarrollo.sincronizacionsqlitemysql"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <service
             android:name=".sync.ServicioAutenticacion"
@@ -67,7 +54,6 @@
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/autenticador" />
         </service>
-
         <service
             android:name=".sync.ServicioSincronizacion"
             android:enabled="true"
@@ -80,8 +66,6 @@
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/sync_adapter" />
         </service>
-
-
     </application>
 
 </manifest>
